--- a/deploy/index-image/community-kubevirt-hyperconverged/1.10.0/manifests/kubevirt-hyperconverged-operator.v1.10.0.clusterserviceversion.yaml
+++ b/deploy/index-image/community-kubevirt-hyperconverged/1.10.0/manifests/kubevirt-hyperconverged-operator.v1.10.0.clusterserviceversion.yaml
@@ -3,7 +3,7 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: ClusterServiceVersion
 metadata:
   annotations:
-    alm-examples: '[{"apiVersion":"hco.kubevirt.io/v1beta1","kind":"HyperConverged","metadata":{"annotations":{"deployOVS":"false"},"name":"kubevirt-hyperconverged","namespace":"kubevirt-hyperconverged"},"spec":{}},{"apiVersion":"networkaddonsoperator.network.kubevirt.io/v1","kind":"NetworkAddonsConfig","metadata":{"name":"cluster"},"spec":{"imagePullPolicy":"IfNotPresent","kubeMacPool":{"rangeEnd":"FD:FF:FF:FF:FF:FF","rangeStart":"02:00:00:00:00:00"},"linuxBridge":{},"macvtap":{},"multus":{},"ovs":{}}},{"apiVersion":"kubevirt.io/v1","kind":"KubeVirt","metadata":{"name":"kubevirt","namespace":"kubevirt"},"spec":{"imagePullPolicy":"Always"}},{"apiVersion":"ssp.kubevirt.io/v1beta1","kind":"SSP","metadata":{"name":"ssp-sample","namespace":"kubevirt"},"spec":{"commonTemplates":{"namespace":"kubevirt"},"templateValidator":{"replicas":2}}},{"apiVersion":"tektontasks.kubevirt.io/v1alpha1","kind":"TektonTasks","metadata":{"name":"tektontasks-sample","namespace":"kubevirt"},"spec":{"featureGates":{"deployTektonTaskResources":true},"pipelines":{"namespace":"kubevirt"}}},{"apiVersion":"cdi.kubevirt.io/v1beta1","kind":"CDI","metadata":{"name":"cdi","namespace":"cdi"},"spec":{"imagePullPolicy":"IfNotPresent"}},{"apiVersion":"hostpathprovisioner.kubevirt.io/v1beta1","kind":"HostPathProvisioner","metadata":{"name":"hostpath-provisioner"},"spec":{"imagePullPolicy":"IfNotPresent","storagePools":[{"name":"local","path":"/var/hpvolumes","pvcTemplate":{"accessModes":["ReadWriteOnce"],"resources":{"requests":{"storage":"50Gi"}}}}],"workload":{"nodeSelector":{"kubernetes.io/os":"linux"}}}}]'
+    alm-examples: '[{"apiVersion":"hco.kubevirt.io/v1beta1","kind":"HyperConverged","metadata":{"annotations":{"deployOVS":"false"},"name":"kubevirt-hyperconverged","namespace":"kubevirt-hyperconverged"},"spec":{}},{"apiVersion":"networkaddonsoperator.network.kubevirt.io/v1","kind":"NetworkAddonsConfig","metadata":{"name":"cluster"},"spec":{"imagePullPolicy":"IfNotPresent","kubeMacPool":{"rangeEnd":"FD:FF:FF:FF:FF:FF","rangeStart":"02:00:00:00:00:00"},"linuxBridge":{},"macvtap":{},"multus":{},"ovs":{}}},{"apiVersion":"kubevirt.io/v1","kind":"KubeVirt","metadata":{"name":"kubevirt","namespace":"kubevirt"},"spec":{"imagePullPolicy":"Always"}},{"apiVersion":"ssp.kubevirt.io/v1beta1","kind":"SSP","metadata":{"name":"ssp-sample","namespace":"kubevirt"},"spec":{"commonTemplates":{"namespace":"kubevirt"},"templateValidator":{"replicas":2}}},{"apiVersion":"cdi.kubevirt.io/v1beta1","kind":"CDI","metadata":{"name":"cdi","namespace":"cdi"},"spec":{"imagePullPolicy":"IfNotPresent"}},{"apiVersion":"hostpathprovisioner.kubevirt.io/v1beta1","kind":"HostPathProvisioner","metadata":{"name":"hostpath-provisioner"},"spec":{"imagePullPolicy":"IfNotPresent","storagePools":[{"name":"local","path":"/var/hpvolumes","pvcTemplate":{"accessModes":["ReadWriteOnce"],"resources":{"requests":{"storage":"50Gi"}}}}],"workload":{"nodeSelector":{"kubernetes.io/os":"linux"}}}}]'
     capabilities: Deep Insights
     categories: OpenShift Optional
     certified: "false"
@@ -15,7 +15,7 @@ metadata:
     operatorframework.io/initialization-resource: '{"apiVersion":"hco.kubevirt.io/v1beta1","kind":"HyperConverged","metadata":{"annotations":{"deployOVS":"false"},"name":"kubevirt-hyperconverged","namespace":"kubevirt-hyperconverged"},"spec":{}}'
     operatorframework.io/suggested-namespace: kubevirt-hyperconverged
     operators.openshift.io/infrastructure-features: '["disconnected","proxy-aware"]'
-    operators.operatorframework.io/internal-objects: '["networkaddonsconfigs.networkaddonsoperator.network.kubevirt.io","kubevirts.kubevirt.io","ssps.ssp.kubevirt.io","tektontasks.tektontasks.kubevirt.io","cdis.cdi.kubevirt.io"]'
+    operators.operatorframework.io/internal-objects: '["networkaddonsconfigs.networkaddonsoperator.network.kubevirt.io","kubevirts.kubevirt.io","ssps.ssp.kubevirt.io","cdis.cdi.kubevirt.io"]'
     repository: https://github.com/kubevirt/hyperconverged-cluster-operator
     support: "false"
   labels:
@@ -91,11 +91,6 @@ spec:
       kind: SSP
       name: ssps.ssp.kubevirt.io
       version: v1beta1
-    - description: TektonTasks is the Schema for the tektontasks API
-      displayName: Tekton Tasks
-      kind: TektonTasks
-      name: tektontasks.tektontasks.kubevirt.io
-      version: v1alpha1
     - description: Represents a CDI deployment
       displayName: CDI deployment
       kind: CDI
@@ -228,18 +223,6 @@ spec:
           resources:
           - ssps
           - ssps/finalizers
-          verbs:
-          - get
-          - list
-          - watch
-          - create
-          - update
-          - delete
-        - apiGroups:
-          - tektontasks.kubevirt.io
-          resources:
-          - tektontasks
-          - tektontasks/finalizers
           verbs:
           - get
           - list
@@ -2037,194 +2020,6 @@ spec:
         serviceAccountName: ssp-operator
       - rules:
         - apiGroups:
-          - '*'
-          resources:
-          - configmaps
-          verbs:
-          - create
-          - delete
-          - list
-          - watch
-        - apiGroups:
-          - '*'
-          resources:
-          - persistentvolumeclaims
-          verbs:
-          - '*'
-        - apiGroups:
-          - '*'
-          resources:
-          - pods
-          verbs:
-          - create
-        - apiGroups:
-          - '*'
-          resources:
-          - secrets
-          verbs:
-          - '*'
-        - apiGroups:
-          - apiextensions.k8s.io
-          resources:
-          - customresourcedefinitions
-          verbs:
-          - get
-          - list
-          - watch
-        - apiGroups:
-          - cdi.kubevirt.io
-          resources:
-          - datasources
-          verbs:
-          - create
-          - delete
-          - get
-        - apiGroups:
-          - cdi.kubevirt.io
-          resources:
-          - datavolumes
-          verbs:
-          - '*'
-        - apiGroups:
-          - config.openshift.io
-          resources:
-          - clusterversions
-          verbs:
-          - get
-        - apiGroups:
-          - ""
-          resources:
-          - serviceaccounts
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - patch
-          - update
-          - watch
-        - apiGroups:
-          - kubevirt.io
-          resources:
-          - virtualmachineinstances
-          - virtualmachines
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - update
-          - watch
-        - apiGroups:
-          - kubevirt.io
-          resources:
-          - virtualmachines/finalizers
-          verbs:
-          - '*'
-        - apiGroups:
-          - rbac.authorization.k8s.io
-          resources:
-          - clusterroles
-          - rolebindings
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - patch
-          - update
-          - watch
-        - apiGroups:
-          - rbac.authorization.k8s.io
-          resources:
-          - rolebindings
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - patch
-          - update
-          - watch
-        - apiGroups:
-          - subresources.kubevirt.io
-          resources:
-          - virtualmachines/restart
-          - virtualmachines/start
-          - virtualmachines/stop
-          verbs:
-          - update
-        - apiGroups:
-          - tekton.dev
-          resources:
-          - clustertasks
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - patch
-          - update
-          - watch
-        - apiGroups:
-          - tekton.dev
-          resources:
-          - pipelines
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - patch
-          - update
-          - watch
-        - apiGroups:
-          - tektontasks.kubevirt.io
-          resources:
-          - tektontasks
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - patch
-          - update
-          - watch
-        - apiGroups:
-          - tektontasks.kubevirt.io
-          resources:
-          - tektontasks/finalizers
-          verbs:
-          - update
-        - apiGroups:
-          - tektontasks.kubevirt.io
-          resources:
-          - tektontasks/status
-          verbs:
-          - get
-          - patch
-          - update
-        - apiGroups:
-          - template.openshift.io
-          resources:
-          - processedtemplates
-          verbs:
-          - create
-        - apiGroups:
-          - template.openshift.io
-          resources:
-          - templates
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - patch
-          - update
-          - watch
-        serviceAccountName: tekton-tasks-operator
-      - rules:
-        - apiGroups:
           - rbac.authorization.k8s.io
           resources:
           - clusterrolebindings
@@ -2745,8 +2540,6 @@ spec:
                   value: v0.85.2
                 - name: SSP_VERSION
                   value: v0.17.0
-                - name: TTO_VERSION
-                  value: v0.5.0
                 - name: HPPO_VERSION
                   value: v0.16.0
                 - name: KV_CONSOLE_PLUGIN_IMAGE
@@ -3215,82 +3008,6 @@ spec:
               serviceAccountName: ssp-operator
               terminationGracePeriodSeconds: 10
       - label:
-          app.kubernetes.io/component: tekton
-          app.kubernetes.io/managed-by: olm
-          app.kubernetes.io/part-of: hyperconverged-cluster
-          app.kubernetes.io/version: 1.10.0
-        name: tekton-tasks-operator
-        spec:
-          replicas: 1
-          selector:
-            matchLabels:
-              control-plane: tekton-tasks-operator
-          strategy: {}
-          template:
-            metadata:
-              labels:
-                app.kubernetes.io/component: tekton
-                app.kubernetes.io/managed-by: olm
-                app.kubernetes.io/part-of: hyperconverged-cluster
-                app.kubernetes.io/version: 1.10.0
-                control-plane: tekton-tasks-operator
-                name: tekton-tasks-operator
-              namespace: kubevirt-hyperconverged
-            spec:
-              containers:
-              - args:
-                - --leader-elect
-                command:
-                - /manager
-                env:
-                - name: OPERATOR_VERSION
-                  value: v0.5.0
-                - name: CLEANUP_VM_IMG
-                - name: COPY_TEMPLATE_IMG
-                - name: MODIFY_DATA_OBJECT_IMG
-                - name: CREATE_VM_IMG
-                - name: DISK_VIRT_CUSTOMIZE_IMG
-                - name: DISK_VIRT_SYSPREP_IMG
-                - name: MODIFY_VM_TEMPLATE_IMG
-                - name: WAIT_FOR_VMI_STATUS_IMG
-                - name: GENERATE_SSH_KEYS_IMG
-                - name: VIRTIO_IMG
-                  value: quay.io/kubevirt/virtio-container-disk@sha256:5b99c78ed831401048e72d72f9ec805710ee7625131fd9ad277b38ab1e67cfb9
-                - name: OPERATOR_NAMESPACE
-                  valueFrom:
-                    fieldRef:
-                      fieldPath: metadata.namespace
-                image: quay.io/kubevirt/tekton-tasks-operator@sha256:6c6e296d48eb5e81236443155ffecb39a44bc490d4cd6ac897d02c13908ea3ca
-                livenessProbe:
-                  httpGet:
-                    path: /healthz
-                    port: 8081
-                  initialDelaySeconds: 15
-                  periodSeconds: 20
-                name: manager
-                readinessProbe:
-                  httpGet:
-                    path: /readyz
-                    port: 8081
-                  initialDelaySeconds: 5
-                  periodSeconds: 10
-                resources:
-                  requests:
-                    cpu: 100m
-                    memory: 150Mi
-                securityContext:
-                  allowPrivilegeEscalation: false
-                  capabilities:
-                    drop:
-                    - ALL
-              priorityClassName: system-cluster-critical
-              securityContext:
-                runAsNonRoot: true
-                seccompProfile:
-                  type: RuntimeDefault
-              serviceAccountName: tekton-tasks-operator
-              terminationGracePeriodSeconds: 10
-      - label:
           app.kubernetes.io/component: storage
           app.kubernetes.io/managed-by: olm
           app.kubernetes.io/part-of: hyperconverged-cluster
@@ -3592,39 +3309,6 @@ spec:
           - create
           - patch
         serviceAccountName: ssp-operator
-      - rules:
-        - apiGroups:
-          - ""
-          resources:
-          - configmaps
-          verbs:
-          - get
-          - list
-          - watch
-          - create
-          - update
-          - patch
-          - delete
-        - apiGroups:
-          - coordination.k8s.io
-          resources:
-          - leases
-          verbs:
-          - get
-          - list
-          - watch
-          - create
-          - update
-          - patch
-          - delete
-        - apiGroups:
-          - ""
-          resources:
-          - events
-          verbs:
-          - create
-          - patch
-        serviceAccountName: tekton-tasks-operator
       - rules:
         - apiGroups:
           - rbac.authorization.k8s.io
@@ -3942,8 +3626,6 @@ spec:
     name: ovs-cni-plugin
   - image: quay.io/kubevirt/ssp-operator@sha256:e93f2b49f2189ee60e17a756942b9847cc9d09602f23bc25ab95d5fe332e0256
     name: ssp-operator
-  - image: quay.io/kubevirt/tekton-tasks-operator@sha256:6c6e296d48eb5e81236443155ffecb39a44bc490d4cd6ac897d02c13908ea3ca
-    name: tekton-tasks-operator
   - image: quay.io/kubevirt/virt-api@sha256:13c8b96a8e1ac89b53fe721bc4d4696adf7f097063e4c7b03aed772890d7291f
     name: virt-api
   - image: quay.io/kubevirt/virt-controller@sha256:e8cf4a193e7f0764c87e5981d96883c8637efeaa925ac1df5e3b26fe644c8ebe
@@ -3958,8 +3640,6 @@ spec:
     name: virt-launcher
   - image: quay.io/kubevirt/virt-operator@sha256:c2e4d01f0d30cc61f30471bc75c1412936ca996db619a7eb87188a6fa4b7a781
     name: virt-operator
-  - image: quay.io/kubevirt/virtio-container-disk@sha256:5b99c78ed831401048e72d72f9ec805710ee7625131fd9ad277b38ab1e67cfb9
-    name: virtio-container
   - image: quay.io/kubevirt/virtio-container-disk@sha256:5b99c78ed831401048e72d72f9ec805710ee7625131fd9ad277b38ab1e67cfb9
     name: virtio-container-disk
   replaces: kubevirt-hyperconverged-operator.v1.9.0
